<resources>
    <string name="app_name">UnityFund</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="have_an_account">Have an Account</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="support">Support</string>
    <string name="appointment">Appointment</string>
    <string name="my_payment">My Payment</string>
    <string name="rating_and_feedback">Rating and Feedback</string>
    <string name="security">Security</string>
    <string name="login">LOGIN</string>
    <string name="create_n_account">CREATE \nACCOUNT</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="App_name">UnityFund</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="continue_with">Continue With</string>
    <string name="enter_username">Enter Username</string>
    <string name="log_out">Log Out</string>
    <string name="all_transaction">All Transaction</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="user_name">User Name</string>
    <string name="city_name">city name</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="ngo1">Friends Care Foundation is a Non Governmental Organization established under Society Registration Act, 1860 and The Bombay Public Trust Act, 1950. Organization mainly aims in benefiting underprivileged children and their families through various projects on healthcare, education, nutrition, shelter, livelihood, women empowerment, child protection, and other social issues. Friends Care Foundation’s aims sustainable development by improving social-economic conditions through healthcare, vocational training, education, livelihood development, self governance and women as well as children’s human rights. Friends Care Foundation is dedicated to create positive transformation &amp; believes in bottom up approach. Fostering a society wherein women are empowered enough to add value to their family and society; all children are empowered with education and enjoy their childhood rights, and creating sustainable and humane society wherein all living being have access to manage their livelihood. Friends Care Foundation is focused in Orphanage Support, Child Rights, Education Support, Old Age Support, Women Empowerment, Calamity Relief, Medical Support, Care Of Birds &amp; Animals and Events in Gujarat.</string>
    <string name="ngo2">Omkar Foundation Trust” was established in the year of 2014 by inspiration of Mantrayug Parivartak Saint Shree OmRushi Priteshbhai, considerately known as “Guruji” by his followers. He can deeply understand the difficulties of physically challenged person as he suffered by his own. And that instinct motivated him to do something for this community, consequently by his own inspiration, he instigate trust for elevation of physically and mentally challenged people. He is also engaged with many other social activities for growth &amp; development educationally &amp; financially backward people especially women and children.
Trust is having its office at Ahmedabad, Gujarat. Our team is comprising of 5 other trustees and all are dedicated to our mission and are enthusiastically working towards establishment of the physically and mentally challenged people under blessings of pujya gurudev.
Trust is conducting various activities for physically &amp; mentally challenged people like insurance protection, educational classes, craft works, communication techniques, medical aid, facilitate government aid for such community.
The trust is engaged in different activities like education, social &amp; medical services , skill development etc. Trust is frequently organizing various medical camp like general medical checkups, Allopathic, Homeopathic consultation, blood donation, food distribution for poor and needy people.
Our aim made achievable through donation and contributions received from various organizations and individuals.</string>
    <string name="ngo3">Manav Kartavya would like to ask you, “Have you ever wondered what kartavya a Manav shall does?” Manav Kartavya has not only wondered, but explored it to experience it! Manav has the hands to perform his kartavya by helping others. Manav has the feet to perform his kartavya by hastening to poor and needy. And Manav has the head to perform his kartavya by considering everyone as inclusive to uplift an individual from his state of neediness to a state of self-reliant.
Founded in 2015, Manav Kartavya is an Ahmedabad, Gujarat, India, based Non-Governmental Organization (NGO) committed to helping disadvantaged beings. Each day represents a fresh opportunity to share our Vision of creating, ‘The Advantaged Society’; and to live our purpose of empowering the possibilities for economically weaker communities by supporting them with basic necessities such as education, food, health, shelter, etc. to empower them to take charge of their own future as our Mission.
    Manav Kartavya strongly believes that a better, more sustainable world will take shape when economically weaker communities will be equipped with basic needs and proper resources to sustain their lives and to grow. With this, they will gain the power to help themselves, their families, and so to the entire communities. This is what will lead the transformation and will create ‘The Advantaged Society.’
With restoring a sense of self worth and confidence in economically weaker communities, Manav Kartavya is empowering possibilities for every disadvantaged being to reach their full potential. Manav Kartavya is enabling Child Education by improving access to basic educational needs as well as by facilitating education itself; Women Empowerment by supporting the growth from stagnation to escalation through a variety of means; Health by making vital healthcare accessible as well as by spreading awareness about essential preventive healthcare; senior citizens’ shelter and old age related facilities via Old Age Home; and a step forward to help Needy People especially where fundamental economic household security is a big challenge.
Manav Kartavya is not just a committed NGO for helping only underprivileged human beings, but also an NGO which focuses upon enhancing the protection of lives which are of course living beings but not human one. Yes! Manav Kartavya is also an equally committed NGO for the basic protection and enhancement of lives of Gaumatas via Gaushalas.</string>
    <string name="all_ngos">All NGOs</string>
    <string name="our_work">Our Work</string>
    <string name="donate">Donate</string>
    <string name="event">EVENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donation_name">Help someone who need better places</string>
    <string name="ngo_name">By Humankind</string>
    <string name="donate_now">Donate Now</string>
    <string name="raised_100000">Raised: ₹100000</string>
    <string name="read_more">Read More</string>
    <string name="version">Version 1.1</string>
    <string name="terms_conditions_content">
        Welcome to UnityFund! These terms and conditions outline the rules and regulations for the use of the UnityFund Mobile Application.
        By accessing this application, we assume you accept these terms and conditions. Do not continue to use UnityFund if you do not agree to all of the terms and conditions stated on this page.
        License
        Unless otherwise stated, UnityFund and/or its licensors own the intellectual property rights for all material on UnityFund. All intellectual property rights are reserved. You may access this from UnityFund for your personal use subjected to restrictions set in these terms and conditions.
        Restrictions
        You are specifically restricted from all of the following:
        Publishing any UnityFund material in any other media
        Selling, sublicensing, and/or otherwise commercializing any UnityFund material
        Publicly performing and/or showing any UnityFund material
        Using UnityFund in any way that is or may be damaging to the app
        Your Content
        In these terms and conditions, "Your Content" shall mean any audio, video, text, images, or other material you choose to display on UnityFund. By displaying Your Content, you grant our ngos a non-exclusive, worldwide irrevocable, sub-licensable license to use, reproduce, adapt, publish, translate, and distribute it in any and all media.
        No warranties
        UnityFund is provided "as is," with all faults, and our ngos makes no express or implied representations or warranties of any kind related to this application or the materials contained on this application.
        Limitation of liability
        In no event shall our ngos or its suppliers be liable for any damages arising out of the use or inability to use UnityFund.
        Indemnification
        You hereby indemnify to the fullest extent our ngos from and against any and/or all liabilities, costs, demands, causes of action, damages, and expenses arising in any way related to your breach of any of the provisions of these terms.
        Severability
        If any provision of these terms is found to be invalid under any applicable law, such provisions shall be deleted without affecting the remaining provisions herein.
        Variation of Terms
        UnityFund is permitted to revise these terms at any time as it sees fit, and by using UnityFund you are expected to review these terms regularly.
        Governing Law &amp; Jurisdiction
        These terms will be governed by and interpreted in accordance with the laws of India, and you submit to the non-exclusive jurisdiction of the state and federal courts located in Ahmedabad for the resolution of any disputes.
    </string>
    <string name="appointment_reason">Appointment Reason</string>
    <string name="appointment_title">Appointment Title</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save_appointment">Save Appointment</string>
    <string name="contact">Contact</string>
    <string name="contact_support">Contact Support</string>
    <string name="blog_image_description">Image of blog\n</string>
    <string name="program_name">program_name</string>
    <string name="register_now">Register now\n</string>
</resources>