<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:id="@+id/ngoImageTextView"
                app:srcCompat="@drawable/splash_screen_bg"
                android:contentDescription="@string/all_ngos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donation_name"
                    android:id="@+id/donation_nameTextView"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/ngo_name_fot_donation"
                    android:text="@string/ngo_name"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/raised_100000"
                    android:id="@+id/raisedTextView"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    android:background="@drawable/donate_btn_bg"
                    android:layout_height="wrap_content"
                    android:text="@string/donate_now"
                    />
            </LinearLayout>
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>
