<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KnowMore">

    <ImageView
        android:id="@+id/backToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/Userprofile"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ngoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/itim"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToHome" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/ngoName"
        app:layout_constraintStart_toStartOf="@+id/ngoName"
        app:layout_constraintTop_toBottomOf="@+id/ngoName">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:iss_auto_cycle="true"
            app:iss_delay="1000"
            app:iss_period="2000"
            app:iss_text_align="CENTER" />
    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"

        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ourWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ngocardbtn"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/our_work"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/nonselecteditem"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/donate"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/nonselecteditem"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/appointment"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/nonselecteditem"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/event"
                android:textColor="@color/black" />


        </LinearLayout>
    </HorizontalScrollView>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>
    </ScrollView>


    <!--    <TextView-->
<!--        android:id="@+id/ngoDescription"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="TextView"-->
<!--        android:textSize="16sp"-->
<!--        android:fontFamily="@font/itim"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/cardView"-->
<!--        app:layout_constraintStart_toStartOf="@+id/cardView"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cardView"-->

<!--        />-->


</androidx.constraintlayout.widget.ConstraintLayout>